F&GDEV/src/objects/Monthly_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qtr_Goal__c</fullName>
        <label>Qtr Goal</label>
        <referenceTo>Qtr_Goal__c</referenceTo>
        <relationshipLabel>Monthly Goals</relationshipLabel>
        <relationshipName>Monthly_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Monthly Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Qtr_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Date_Completed__c</columns>
        <columns>Focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Monthly_Focus</fullName>
        <columns>Qtr_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Date_Completed__c</columns>
        <columns>Focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Focus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Monthly Focus</label>
    </listViews>
    <nameField>
        <label>Monthly Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>